// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: Message Events tests getRowData renders correctly 1`] = `
Array [
  <DisplayDate
    formattedDate="formatted"
  />,
  "Injection",
  "tom.haverford@pawnee.state.in.us",
  "mean@friendly",
  <ViewDetailsButton
    event_id="456xyz"
    formattedDate="formatted"
    friendly_from="mean@friendly"
    message_id="123abc"
    rcpt_to="tom.haverford@pawnee.state.in.us"
    type="injection"
  />,
]
`;

exports[`Page: Message Events tests should only render loading component while loading 1`] = `
<Page
  empty={Object {}}
  title="Events Search"
>
  <withRouter(Connect(MessageEventsSearch)) />
  <PanelLoading
    minHeight="400px"
  />
</Page>
`;

exports[`Page: Message Events tests should render error when action fails 1`] = `
<Page
  empty={Object {}}
  title="Events Search"
>
  <withRouter(Connect(MessageEventsSearch)) />
  <ApiErrorBanner
    errorDetails="You done f'ed up now"
    message="Sorry, we seem to have had some trouble loading your message events."
    reload={[Function]}
  />
</Page>
`;

exports[`Page: Message Events tests should render page correctly 1`] = `
<Page
  empty={Object {}}
  title="Events Search"
>
  <withRouter(Connect(MessageEventsSearch)) />
  <div>
    <TableCollection
      columns={
        Array [
          Object {
            "label": "Time",
          },
          Object {
            "label": "Event",
          },
          Object {
            "label": "Recipient",
          },
          Object {
            "label": "From Address",
          },
          null,
        ]
      }
      defaultSortColumn="timestamp"
      defaultSortDirection="desc"
      getRowData={[Function]}
      rows={
        Array [
          Object {
            "formattedDate": "so-formatted",
            "friendly_from": "hi@friendly",
            "rcpt_to": "ron.swanson@pawnee.state.in.us",
            "type": "delivery",
          },
          Object {
            "formattedDate": "formatted",
            "friendly_from": "mean@friendly",
            "rcpt_to": "tom.haverford@pawnee.state.in.us",
            "type": "injection",
          },
        ]
      }
    />
    <Component
      currentPage={2}
      handleFirstPage={[Function]}
      handlePageChange={[Function]}
      nextDisabled={false}
      perPage={25}
      previousDisabled={false}
      totalCount={100}
    />
    <Component
      data={
        Array [
          Object {
            "formattedDate": "so-formatted",
            "friendly_from": "hi@friendly",
            "rcpt_to": "ron.swanson@pawnee.state.in.us",
            "type": "delivery",
          },
          Object {
            "formattedDate": "formatted",
            "friendly_from": "mean@friendly",
            "rcpt_to": "tom.haverford@pawnee.state.in.us",
            "type": "injection",
          },
        ]
      }
      onPerPageChange={[Function]}
      perPage={25}
      perPageButtons={
        Array [
          10,
          25,
          50,
          100,
        ]
      }
      saveCsv={true}
      totalCount={100}
    />
  </div>
</Page>
`;

exports[`Page: Message Events tests should render the empty message when 0 results are returned 1`] = `
<Page
  empty={Object {}}
  title="Events Search"
>
  <withRouter(Connect(MessageEventsSearch)) />
  <Empty
    message="There are no message events for your current query"
  />
</Page>
`;
